Menu: Wrap menu items in a <div>
This avoids styling issues where ui-state-focus rules apply to submenus.

Fixes #10162
Closes gh-1342

--- a/demos/menu/categories.html
+++ b/demos/menu/categories.html
@@ -25,14 +25,14 @@
 <body>
 
 <ul id="menu">
-	<li class="ui-widget-header">Category 1</li>
-	<li>Option 1</li>
-	<li>Option 2</li>
-	<li>Option 3</li>
-	<li class="ui-widget-header">Category 2</li>    
-	<li>Option 4</li>
-	<li>Option 5</li>
-	<li>Option 6</li>
+	<li class="ui-widget-header"><div>Category 1</div></li>
+	<li><div>Option 1</div></li>
+	<li><div>Option 2</div></li>
+	<li><div>Option 3</div></li>
+	<li class="ui-widget-header"><div>Category 2</div></li>    
+	<li><div>Option 4</div></li>
+	<li><div>Option 5</div></li>
+	<li><div>Option 6</div></li>
 </ul>
 
 <div class="demo-description">
