--- a/demos/menu/default.html
+++ b/demos/menu/default.html
@@ -22,38 +22,38 @@
 <body>
 
 <ul id="menu">
-	<li class="ui-state-disabled">Aberdeen</li>
-	<li>Ada</li>
-	<li>Adamsville</li>
-	<li>Addyston</li>
-	<li>Delphi
+	<li class="ui-state-disabled"><div>Aberdeen</div></li>
+	<li><div>Ada</div></li>
+	<li><div>Adamsville</div></li>
+	<li><div>Addyston</div></li>
+	<li><div>Delphi</div>
 		<ul>
-			<li class="ui-state-disabled">Ada</li>
-			<li>Saarland</li>
-			<li>Salzburg an der schönen Donau</li>
+			<li class="ui-state-disabled"><div>Ada</div></li>
+			<li><div>Saarland</div></li>
+			<li><div>Salzburg an der schönen Donau</div></li>
 		</ul>
 	</li>
-	<li>Saarland</li>
-	<li>Salzburg
+	<li><div>Saarland</div></li>
+	<li><div>Salzburg</div>
 		<ul>
-			<li>Delphi
+			<li><div>Delphi</div>
 				<ul>
-					<li>Ada</li>
-					<li>Saarland</li>
-					<li>Salzburg</li>
+					<li><div>Ada</div></li>
+					<li><div>Saarland</div></li>
+					<li><div>Salzburg</div></li>
 				</ul>
 			</li>
-			<li>Delphi
+			<li><div>Delphi</div>
 				<ul>
-					<li>Ada</li>
-					<li>Saarland</li>
-					<li>Salzburg</li>
+					<li><div>Ada</div></li>
+					<li><div>Saarland</div></li>
+					<li><div>Salzburg</div></li>
 				</ul>
 			</li>
-			<li>Perch</li>
+			<li><div>Perch</div></li>
 		</ul>
 	</li>
-	<li class="ui-state-disabled">Amesville</li>
+	<li class="ui-state-disabled"><div>Amesville</div></li>
 </ul>
 
 <div class="demo-description">
