--- a/demos/menu/icons.html
+++ b/demos/menu/icons.html
@@ -22,20 +22,38 @@
 <body>
 
 <ul id="menu">
-	<li><span class="ui-icon ui-icon-disk"></span>Save</li>
-	<li><span class="ui-icon ui-icon-zoomin"></span>Zoom In</li>
-	<li><span class="ui-icon ui-icon-zoomout"></span>Zoom Out</li>
-	<li class="ui-state-disabled"><span class="ui-icon ui-icon-print"></span>Print...</li>
 	<li>
-		Playback
+		<div><span class="ui-icon ui-icon-disk"></span>Save</div>
+	</li>
+	<li>
+		<div><span class="ui-icon ui-icon-zoomin"></span>Zoom In</div>
+	</li>
+	<li>
+		<div><span class="ui-icon ui-icon-zoomout"></span>Zoom Out</div>
+	</li>
+	<li class="ui-state-disabled">
+		<div><span class="ui-icon ui-icon-print"></span>Print...</div>
+	</li>
+	<li>
+		<div>Playback</div>
 		<ul>
-			<li><span class="ui-icon ui-icon-seek-start"></span>Prev</li>
-			<li><span class="ui-icon ui-icon-stop"></span>Stop</li>
-			<li><span class="ui-icon ui-icon-play"></span>Play</li>
-			<li><span class="ui-icon ui-icon-seek-end"></span>Next</li>
+			<li>
+				<div><span class="ui-icon ui-icon-seek-start"></span>Prev</div>
+			</li>
+			<li>
+				<div><span class="ui-icon ui-icon-stop"></span>Stop</div>
+			</li>
+			<li>
+				<div><span class="ui-icon ui-icon-play"></span>Play</div>
+			</li>
+			<li>
+				<div><span class="ui-icon ui-icon-seek-end"></span>Next</div>
+			</li>
 		</ul>
 	</li>
-	<li>Learn more about this menu</li>
+	<li>
+		<div>Learn more about this menu</div>
+	</li>
 </ul>
 
 <div class="demo-description">
