Autocomplete: Re-add wrappers to menu items

--- a/demos/autocomplete/custom-data.html
+++ b/demos/autocomplete/custom-data.html
@@ -68,7 +68,7 @@
 		})
 		.autocomplete( "instance" )._renderItem = function( ul, item ) {
 			return $( "<li>" )
-				.append( "<a>" + item.label + "<br>" + item.desc + "</a>" )
+				.append( "<div>" + item.label + "<br>" + item.desc + "</div>" )
 				.appendTo( ul );
 		};
 	});
